# cyd-wm

./: .gitignore  README.md  event_desc.yaml
src/: CMakeLists.txt  main.cpp
src/config_mgr/: config_mgr.cpp  config_mgr.h
src/infrastructure/repositories/: clients_repo.cpp  clients_repo.h  monitors_repo.cpp  monitors_repo.h  structs.h
src/ops/: client_ops.cpp  client_ops.h  drw.cpp  monitor_ops.cpp  monitor_ops.h  window_ops.cpp  window_ops.h  x11_ops.cpp  x11_ops.h
src/utils/: logger.cpp  logger.h
src/watched_tasks/: watched_tasks.cpp  watched_tasks.h  watched_tasks_cfg.h
src/watched_tasks/event_handling/: event_handlers.h  event_loop.cpp  event_loop.h  keyboard_handler.cpp  notify_handlers.cpp
src/watched_tasks/event_handling/handler_impl/: client_comm_handlers.cpp  exposure_handlers.cpp  input_focus_handlers.cpp  keyboard_handler.cpp  pointer_handlers.cpp  structure_ctl_handlers.cpp  win_crossing_handlers.cpp  win_state_handlers.cpp
src/watched_tasks/program_shell/: program_shell.cpp  program_shell.h
